--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
   * under the License.
   *
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -30,7 +29,7 @@
 
   <artifactId>enforcer-rules</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1.1-SNAPSHOT</version>
+  <version>1.3.1.1</version>
 
   <name>Apache Maven Enforcer Rules</name>
   <description>This component contains the standard Enforcer Rules</description>
@@ -40,6 +39,7 @@
     <connection>scm:git:git@github.com:lkwg82/enforcer-rules.git</connection>
     <developerConnection>scm:git:git@github.com:lkwg82/enforcer-rules.git</developerConnection>
     <url>git@github.com:lkwg82/enforcer-rules.git</url>
+    <tag>enforcer-rules-1.3.1.1</tag>
   </scm>
   <issueManagement>
     <system>github</system>
