--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <artifactId>enforcer-rules</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1.1</version>
+  <version>1.3.1.2-SNAPSHOT</version>
 
   <name>Apache Maven Enforcer Rules</name>
   <description>This component contains the standard Enforcer Rules</description>
@@ -39,7 +39,7 @@
     <connection>scm:git:git@github.com:lkwg82/enforcer-rules.git</connection>
     <developerConnection>scm:git:git@github.com:lkwg82/enforcer-rules.git</developerConnection>
     <url>git@github.com:lkwg82/enforcer-rules.git</url>
-    <tag>enforcer-rules-1.3.1.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>github</system>
