--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
       <artifactId>xstream</artifactId>
       <version>1.4.5</version>
     </dependency>
+    <dependency>
+      <groupId>de.lgohlke.mojo</groupId>
+      <artifactId>enforcer-rules-report</artifactId>
+      <version>1.3.1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
